--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     dependencies {
-        classpath("com.google.dagger:hilt-android-gradle-plugin:2.38.1")
-        classpath ('com.android.tools.build:gradle:3.2.0')
+        classpath('com.google.dagger:hilt-android-gradle-plugin:2.40.1')
+        classpath ('com.android.tools.build:gradle:7.4.2')
         classpath 'com.google.gms:google-services:4.3.14'
         def nav_version = "2.5.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
@@ -11,8 +11,8 @@ buildscript {
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id("com.google.dagger.hilt.android") version "2.44" apply false
 }
